Corrected entry key mistake

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -2692,7 +2692,7 @@
 	Year = {2005}
 }
 
-@article{kavan2006dual,
+@article{Ka06,
   title={Dual quaternions for rigid transformation blending},
   author={Kavan, Ladislav and Collins, Steven and O’Sullivan, Carol and Zara, Jiri},
   journal={Technical report},
