--- a/personalRef.bib
+++ b/personalRef.bib
@@ -1,5 +1,33 @@
 %% Saved with string encoding Unicode (UTF-8)
 
+@inproceedings{At12,
+ author = {Atariah, Dror and Rote, G\"{u}nter},
+ title = {Configuration space visualization},
+ booktitle = {Proceedings of the 2012 symposuim on Computational Geometry},
+ series = {SoCG '12},
+ year = {2012},
+ isbn = {978-1-4503-1299-8},
+ location = {Chapel Hill, North Carolina, USA},
+ pages = {415--416},
+ numpages = {2},
+ url = {http://doi.acm.org/10.1145/2261250.2261313},
+ doi = {10.1145/2261250.2261313},
+ acmid = {2261313},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {configuration space, motion, workspace},
+}
+
+@article{Atariah2013,
+  author = {Atariah, Dror and Ghosh, Sunayana andRote, G\"{u}nter},
+  title = {On the Parameterization and the Geometry of the Configuration Space of a Single Planar Robot},
+  journal = {Journal of WSCG},
+  year = {2013},
+  volume = {21},
+  number = {1},
+  pages = {11--20}
+}
+
 @inproceedings{Ai09,
 	Author = {O. Aichholzer and F. Aurenhammer and B. Kornberger and S. Plantinga and G. Rote and A. Sturm and G. Vegter},
 	Booktitle = {Eurographics Symposium on Geometry Processing},
