--- a/personalRef.bib
+++ b/personalRef.bib
@@ -18,7 +18,7 @@
  keywords = {configuration space, motion, workspace},
 }
 
-@article{Atariah2013,
+@article{At13,
   author = {Atariah, Dror and Ghosh, Sunayana andRote, G\"{u}nter},
   title = {On the Parameterization and the Geometry of the Configuration Space of a Single Planar Robot},
   journal = {Journal of WSCG},
