Added ref to Salzman's MMS journal version

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -10,7 +10,6 @@
  location = {Chapel Hill, North Carolina, USA},
  pages = {415--416},
  numpages = {2},
- url = {http://doi.acm.org/10.1145/2261250.2261313},
  doi = {10.1145/2261250.2261313},
  acmid = {2261313},
  publisher = {ACM},
@@ -4274,6 +4273,20 @@
 	School = {Tel Aviv University},
 	Title = {Motion Planning via Manifold Samples},
 	Year = {2011}}
+
+@article{Sa13,
+  year={2013},
+  issn={0178-4617},
+  journal={Algorithmica},
+  doi={10.1007/s00453-012-9736-1},
+  title={Motion Planning via Manifold Samples},
+  url={http://dx.doi.org/10.1007/s00453-012-9736-1},
+  publisher={Springer-Verlag},
+  keywords={Motion planning; Computational geometry; Manifolds},
+  author={Salzman, Oren and Hemmer, Michael and Raveh, Barak and Halperin, Dan},
+  pages={1-19},
+  language={English}
+}
 
 @book{Sa96,
 	Author = {Takashi Sakai},
