Changed Tel Aviv to Tel-Aviv

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -4269,8 +4269,7 @@
 	Date-Added = {2011-05-11 10:41:04 +0200},
 	Date-Modified = {2012-02-25 17:31:14 +0100},
 	Keywords = {motion planning},
-	Note = {Preprint},
-	School = {Tel Aviv University},
+	School = {Tel-Aviv University},
 	Title = {Motion Planning via Manifold Samples},
 	Year = {2011}}
 
