Corrected bib entry

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -3,7 +3,7 @@
 @inproceedings{At12,
  author = {Atariah, Dror and Rote, G\"{u}nter},
  title = {Configuration space visualization},
- booktitle = {Proceedings of the 2012 symposuim on Computational Geometry},
+ booktitle = {Proceedings of the 2012 symposium on Computational Geometry},
  series = {SoCG '12},
  year = {2012},
  isbn = {978-1-4503-1299-8},
@@ -18,7 +18,7 @@
 }
 
 @article{At13,
-  author = {Atariah, Dror and Ghosh, Sunayana andRote, G\"{u}nter},
+  author = {Atariah, Dror and Ghosh, Sunayana and Rote, G\"{u}nter},
   title = {On the Parameterization and the Geometry of the Configuration Space of a Single Planar Robot},
   journal = {Journal of WSCG},
   year = {2013},
