Updated the bib file: sorted and corrected entries.

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -1,32 +1,5 @@
 %% Saved with string encoding Unicode (UTF-8)
 
-@inproceedings{At12,
- author = {Atariah, Dror and Rote, G\"{u}nter},
- title = {Configuration space visualization},
- booktitle = {Proceedings of the 2012 symposium on Computational Geometry},
- series = {SoCG '12},
- year = {2012},
- isbn = {978-1-4503-1299-8},
- location = {Chapel Hill, North Carolina, USA},
- pages = {415--416},
- numpages = {2},
- doi = {10.1145/2261250.2261313},
- acmid = {2261313},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {configuration space, motion, workspace},
-}
-
-@article{At13,
-  author = {Atariah, Dror and Ghosh, Sunayana and Rote, G\"{u}nter},
-  title = {On the Parameterization and the Geometry of the Configuration Space of a Single Planar Robot},
-  journal = {Journal of WSCG},
-  year = {2013},
-  volume = {21},
-  number = {1},
-  pages = {11--20}
-}
-
 @inproceedings{Ai09,
 	Author = {O. Aichholzer and F. Aurenhammer and B. Kornberger and S. Plantinga and G. Rote and A. Sturm and G. Vegter},
 	Booktitle = {Eurographics Symposium on Geometry Processing},
@@ -211,6 +184,21 @@
 	Year = {2004}
 }
 
+@article{An12,
+  author    = {Rafael Kuffner dos Anjos and
+               Jo{\~a}o Madeiras Pereira and
+               Jo{\~a}o Fradinho Oliveira},
+  title     = {Collision Detection on Point Clouds Using a 2.5+D Image-Based
+               Approach},
+  journal   = {Journal of WSCG},
+  volume    = {20},
+  number    = {2},
+  year      = {2012},
+  pages     = {145-154},
+  ee        = {http://wscg.zcu.cz/jwscg/J_WSCG_2012/!_2012-Journal-Full-2.pdf},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
 @inproceedings{Ancuti2009,
 	Author = {Cosmin Ancuti, Codruta Orniana Ancuti, Philippe Bekaert},
 	Booktitle = {Computer Graphics Forum},
@@ -281,6 +269,33 @@
 	Timestamp = {2009.12.14},
 	Title = {Weak witnesses for Delaunay triangulations of submanifolds},
 	Year = {2007}
+}
+
+@inproceedings{At12,
+ author = {Atariah, Dror and Rote, G\"{u}nter},
+ title = {Configuration space visualization},
+ booktitle = {Proceedings of the 2012 symposium on Computational Geometry},
+ series = {SoCG '12},
+ year = {2012},
+ isbn = {978-1-4503-1299-8},
+ location = {Chapel Hill, North Carolina, USA},
+ pages = {415--416},
+ numpages = {2},
+ doi = {10.1145/2261250.2261313},
+ acmid = {2261313},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {configuration space, motion, workspace},
+}
+
+@article{At13,
+  author = {Atariah, Dror and Ghosh, Sunayana and Rote, G\"{u}nter},
+  title = {On the Parameterization and the Geometry of the Configuration Space of a Single Planar Robot},
+  journal = {Journal of WSCG},
+  year = {2013},
+  volume = {21},
+  number = {1},
+  pages = {11--20}
 }
 
 @inproceedings{Au07,
@@ -433,6 +448,17 @@
 	Url = {http://dx.doi.org/10.1016/j.cagd.2010.04.004},
 	Volume = {27},
 	Year = {2010}
+}
+
+@article{Ba90,
+author = {Bajaj, Chanderjit and Kim, Myung-Soo},
+title = {Generation of Configuration Space Obstacles: Moving Algebraic Surfaces},
+volume = {9},
+number = {1},
+pages = {92-112},
+year = {1990},
+doi = {10.1177/027836499000900104},
+journal = {The International Journal of Robotics Research}
 }
 
 @article{Be02,
@@ -752,15 +778,6 @@
 	Title = {Provably good surface sampling and approximation},
 	Url = {http://portal.acm.org/ft_gateway.cfm?id=882372&type=pdf&coll=GUIDE&dl=GUIDE&CFID=9433393&CFTOKEN=77643046},
 	Year = {2003}
-}
-
-@inproceedings{He11a,
-	Author = {Andreas von Dziegielewski and Michael Hemmer},
-	Booktitle = {EuroCG},
-	Date-Added = {2012-01-03 08:51:57 +0200},
-	Date-Modified = {2012-01-03 08:53:37 +0200},
-	Title = {High Quality Surface Mesh Generation for Swept Volumes},
-	Year = {2011}
 }
 
 @article{Borsuk1948,
@@ -1951,22 +1968,6 @@
 	Year = {2004}
 }
 
-@conference{Ed98,
-	Author = {Herbert Edelsbrunner},
-	Booktitle = {LATIN'98: Theoretical Informatics},
-	Crossref = {Ed94},
-	Date-Modified = {2011-03-25 08:40:02 +0100},
-	Owner = {drorata},
-	Pages = {119--132},
-	Printed = {1},
-	Publisher = {Springer},
-	Timestamp = {2010.03.04},
-	Title = {Shape reconstruction with Delaunay complex},
-	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
-	Volume = {1380/1998},
-	Year = {1998}
-}
-
 @article{Freedman2007,
 	Abstract = {We develop a method for measuring and localizing homology classes.
 	This involves two problems. First, we define relevant notions of
@@ -2001,6 +2002,22 @@
 	Title = {A Note on Mapping Cylinders},
 	Volume = {18},
 	Year = {1971}}
+
+@conference{Ed98,
+	Author = {Herbert Edelsbrunner},
+	Booktitle = {LATIN'98: Theoretical Informatics},
+	Crossref = {Ed94},
+	Date-Modified = {2011-03-25 08:40:02 +0100},
+	Owner = {drorata},
+	Pages = {119--132},
+	Printed = {1},
+	Publisher = {Springer},
+	Timestamp = {2010.03.04},
+	Title = {Shape reconstruction with Delaunay complex},
+	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
+	Volume = {1380/1998},
+	Year = {1998}
+}
 
 @book{Ga87,
 	Author = {S. Gallot and D. Hulin and J. Lafontaine},
@@ -2265,6 +2282,22 @@
 	Title = {Differential Topology},
 	Year = {1974}}
 
+@inproceedings{Gu86,
+ author = {Guibas, L and Seidel, R},
+ title = {Computing convolutions by reciprocal search},
+ booktitle = {Proceedings of the second annual symposium on Computational geometry},
+ series = {SCG '86},
+ year = {1986},
+ isbn = {0-89791-194-6},
+ location = {Yorktown Heights, New York, USA},
+ pages = {90--99},
+ numpages = {10},
+ doi = {10.1145/10515.10525},
+ acmid = {10525},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
 @inproceedings{Gunduz2003,
 	Author = {A. Gunduz and H. Krim},
 	Booktitle = {Int. Conf. on Image Processing},
@@ -2425,6 +2458,15 @@
 	Pages = {197--206},
 	Title = {Stable Snap Rounding},
 	Year = {2011}}
+
+@inproceedings{He11a,
+	Author = {Andreas von Dziegielewski and Michael Hemmer},
+	Booktitle = {EuroCG},
+	Date-Added = {2012-01-03 08:51:57 +0200},
+	Date-Modified = {2012-01-03 08:53:37 +0200},
+	Title = {High Quality Surface Mesh Generation for Swept Volumes},
+	Year = {2011}
+}
 
 @inbook{He97,
 	Author = {Henk, Martin and Richter-Gebert, J\"{u}rgen and Ziegler, G\"{u}nter M.},
