--- a/personalRef.bib
+++ b/personalRef.bib
@@ -298,6 +298,13 @@
   pages = {11--20}
 }
 
+@techreport{At13a,
+  author =       {Dror Atariah and Sunayana Ghosh and Günter Rote},
+  title =        {On the Parameterization and the Geometry of the Configuration Space of a Single Planar Robot},
+  institution =  {Freie Universität Berlin},
+  year =         {2013}
+}
+
 @inproceedings{Au07,
 	Author = {F. Aurenhammer and M. Peternell and H. Pottmann and J. Wallner},
 	Booktitle = {Proc. 4th Int. Symp. on Voronoi Diagrams in Science and Engineering},
