Corrected technical issues with the entries

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -188,7 +188,7 @@
   author    = {Rafael Kuffner dos Anjos and
                Jo{\~a}o Madeiras Pereira and
                Jo{\~a}o Fradinho Oliveira},
-  title     = {Collision Detection on Point Clouds Using a 2.5+D Image-Based
+  title     = {Collision Detection on Point Clouds Using a $2.5+D$ Image-Based
                Approach},
   journal   = {Journal of WSCG},
   volume    = {20},
@@ -355,7 +355,7 @@
 }
 
 @inproceedings{Aydin2009,
-	Author = {Tunc Ozan Aydin, Karol Myszkowski, Hans-Peter Seidel},
+	Author = {Tunc Ozan Aydin and Karol Myszkowski and Hans-Peter Seidel},
 	Booktitle = {Computer Graphics Forum},
 	Number = {2},
 	Owner = {drorata},
@@ -987,8 +987,6 @@ journal = {The International Journal of Robotics Research}
 	Address = {New York, NY, USA},
 	Author = {Canas, Guillermo D. and Gortler, Steven J.},
 	Booktitle = {Proceedings of the 2012 symposuim on Computational Geometry},
-	Date-Added = {2012-06-29 11:51:20 +0200},
-	Date-Modified = {2012-06-29 11:51:26 +0200},
 	Doi = {10.1145/2261250.2261283},
 	Isbn = {978-1-4503-1299-8},
 	Keywords = {Delaunay triangulations, anisotropic Voronoi diagrams, orphan-free},
@@ -1004,8 +1002,6 @@ journal = {The International Journal of Robotics Research}
 
 @article{Ca86,
 	Author = {John Canny},
-	Date-Added = {2010-11-18 09:36:18 +0100},
-	Date-Modified = {2011-06-01 13:15:54 +0200},
 	Journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
 	Keywords = {motion planning, robot},
 	Month = {March},
@@ -1013,7 +1009,7 @@ journal = {The International Journal of Robotics Research}
 	Pages = {200--209},
 	Printed = {1},
 	Title = {Collision Detection for Moving Polyhedra},
-	Volume = {PAMI-8},
+	Volume = {8},
 	Year = {1986}
 }
 
@@ -1028,7 +1024,7 @@ journal = {The International Journal of Robotics Research}
 	on the surface. We conclude with considering the extension of FastFPS
 	to the sampling of point clouds without the need for prior surface
 	reconstruction.},
-	Author = {Cambridge Cb Fd,Neil A. Dodgson,Carsten Moenning,Neil Dodgson},
+	Author = {Neil A. Dodgson and Carsten Moenning},
 	Date-Modified = {2011-06-01 13:39:42 +0200},
 	File = {:media/data/documents/BMS-PhD/Related Papers/Fast Marching farthest point sampling.pdf:PDF},
 	Institution = {CiteSeerX - Scientific Literature Digital Library and Search Engine [http://citeseerx.ist.psu.edu/oai2] (United States)},
@@ -1192,7 +1188,7 @@ journal = {The International Journal of Robotics Research}
 	this paper, we show how to extend the framework of distance functions
 	to overcome this problem. {R}eplacing compact subsets by measures,
 	we introduce a notion of distance function to a probability distribution
-	in $\{R}^n$. {T}hese functions share many properties with classical
+	in $R^n$. {T}hese functions share many properties with classical
 	distance functions, which makes them suitable for inference purposes.
 	{I}n particular, by considering appropriate level sets of these distance
 	functions, it is possible to associate in a robust way topological
@@ -1377,7 +1373,7 @@ journal = {The International Journal of Robotics Research}
 	Publisher = {ACM},
 	Read = {0},
 	Timestamp = {2010.10.10},
-	Title = {Building triangulations using {\$\epsilon\$}-nets},
+	Title = {Building triangulations using {$\epsilon$}-nets},
 	Year = {2006}
 }
 
@@ -1942,7 +1938,7 @@ journal = {The International Journal of Robotics Research}
 
 @article{Fleishman2003,
 	Address = {New York, NY, USA},
-	Author = {Fleishman,, Shachar and Cohen-Or,, Daniel and Alexa,, Marc and Silva,, Cl\'{a}udio T.},
+	Author = {Fleishman, Shachar and Cohen-Or, Daniel and Alexa, Marc and Silva, Cl\'{a}udio T.},
 	Doi = {http://doi.acm.org/10.1145/944020.944023},
 	File = {:media/data/documents/BMS-PhD/Related Papers/Progressive Point Set Surface.pdf:PDF},
 	Issn = {0730-0301},
@@ -2421,7 +2417,7 @@ journal = {The International Journal of Robotics Research}
 }
 
 @inproceedings{Hasler2009,
-	Author = {Nils Hasler, Carsten Stoll, Martin Sunkel, Bodo Rosenhahn, Hans-Peter Seidel},
+	Author = {Nils Hasler and Carsten Stoll and Martin Sunkel and Bodo Rosenhahn and Hans-Peter Seidel},
 	Booktitle = {Computer Graphics Forum},
 	Date-Modified = {2011-05-30 14:52:47 +0200},
 	Keywords = {clustering, pose analysis},
@@ -2517,7 +2513,7 @@ journal = {The International Journal of Robotics Research}
 }
 
 @inproceedings{HironoriMitake2009,
-	Author = {Hironori Mitake, Kazuyuki Asano, Takafumi Aoki, Salvati Marc, Makoto Sato, and Shoichi Hasegawa},
+	Author = {Hironori Mitake and Kazuyuki Asano and Takafumi Aoki and Salvati Marc and Makoto Sato and Shoichi Hasegawa},
 	Booktitle = {Computer Graphics Forum},
 	Date-Modified = {2010-11-16 17:52:55 +0100},
 	Owner = {drorata},
@@ -2639,7 +2635,7 @@ journal = {The International Journal of Robotics Research}
 }
 
 @inproceedings{Huang2009,
-	Author = {Qi-Xing Huang, Martin Wicke, Bart Adams, Leonidas Guibas},
+	Author = {Qi-Xing Huang and Martin Wicke and Bart Adams and Leonidas Guibas},
 	Booktitle = {Computer Graphics Forum},
 	Number = {2},
 	Owner = {drorata},
@@ -3083,7 +3079,7 @@ journal = {The International Journal of Robotics Research}
 	Year = {2004}}
 
 @inproceedings{Kry2009,
-	Author = {Paul G. Kry, Lionel Reveret, Francois Faure, and Marie-Paule Cani},
+	Author = {Paul G. Kry and Lionel Reveret and Francois Faure and Marie-Paule Cani},
 	Booktitle = {Computer Graphics Forum},
 	Number = {2},
 	Owner = {drorata},
@@ -3289,7 +3285,7 @@ journal = {The International Journal of Robotics Research}
 	Year = {2003}}
 
 @inproceedings{Li09,
-	Author = {Rong Liu, Hao Zhang, Ariel Shamir, and Daniel Cohen-Or},
+	Author = {Rong Liu and Hao Zhang and Ariel Shamir and Daniel Cohen-Or},
 	Booktitle = {Computer Graphics Forum},
 	Date-Modified = {2011-05-30 14:50:22 +0200},
 	Keywords = {shape analysis},
@@ -3463,20 +3459,13 @@ journal = {The International Journal of Robotics Research}
 
 @inproceedings{Merigot2009,
 	Author = {Quentin Mérigot and Maks Ovsjanikov and Leonidas J. Guibas},
-	Bibsonomyintrahash = {266cdeb87344131eddaf5f33c398e8633},
-	Bibsonomyusername = {dblp},
 	Booktitle = {Symposium on Solid and Physical Modeling},
 	Comment = {dblp},
-	Crossref = {conf/sma/2009},
-	Date = {2009-10-12},
-	Description = {dblp},
 	Editor = {Willem F. Bronsvoort and Daniel Gonsor and William C. Regli and Thomas A. Grandine and Jan H. Vandenbrande and Jens Gravesen and John Keyser},
 	Ee = {http://doi.acm.org/10.1145/1629255.1629257},
 	Interhash = {c3f64acbe4122e58afd61673ae2be9d9},
 	Intrahash = {66cdeb87344131eddaf5f33c398e8633},
 	Isbn = {978-1-60558-711-0},
-	Keywords = {dblp},
-	Owner = {drorata},
 	Pages = {1-12},
 	Publisher = {ACM},
 	Timestamp = {2009.11.17},
@@ -3987,8 +3976,7 @@ journal = {The International Journal of Robotics Research}
 	Author = {Erion Plaku and Kostas E. Bekris and Lydia E. Kavraki},
 	Bibsource = {DBLP, http://dblp.uni-trier.de},
 	Booktitle = {ICRA},
-	Crossref = {DBLP:conf/icra/2007},
-	Ee = {http://dx.doi.org/10.1109/ROBOT.2007.364047},
+	url = {http://dx.doi.org/10.1109/ROBOT.2007.364047},
 	File = {:/media/data/documents/academics/cgLearning/related_papers/OOPS for Motion Planning An Online, Open-source Programming System.pdf:PDF},
 	Note = {[95] in proposal},
 	Owner = {drorata},
@@ -4060,7 +4048,7 @@ journal = {The International Journal of Robotics Research}
 }
 
 @inproceedings{Polthier1999,
-	Author = {Konrad Polthier And and Konrad Polthier and Markus Schmies},
+	Author = {Konrad Polthier and Markus Schmies},
 	Booktitle = {Proceedings of Eurographics-IEEE Symposium on Scientific Visualization '99},
 	File = {:media/data/documents/BMS-PhD/Related Papers/Geodesic flow on polyhedral surfaces.pdf:PDF},
 	Owner = {drorata},
@@ -4073,7 +4061,7 @@ journal = {The International Journal of Robotics Research}
 
 @inproceedings{Polthier2006,
 	Address = {New York, NY, USA},
-	Author = {Polthier,, Konrad and Schmies,, Markus},
+	Author = {Polthier, Konrad and Schmies, Markus},
 	Booktitle = {SIGGRAPH '06: ACM SIGGRAPH 2006 Courses},
 	Doi = {http://doi.acm.org/10.1145/1185657.1185664},
 	Isbn = {1-59593-364-6},
@@ -4177,7 +4165,7 @@ journal = {The International Journal of Robotics Research}
 }
 
 @inproceedings{Ritschel2009,
-	Author = {Tobias Ritschel, Matthias Ihrke, Jeppe Revall Frisvad, Joris Coppens, Karol Myszkowski, and Hans-Peter Seidel},
+	Author = {Tobias Ritschel and Matthias Ihrke and Jeppe Revall Frisvad and Joris Coppens and Karol Myszkowski and Hans-Peter Seidel},
 	Booktitle = {Computer Graphics Forum},
 	Number = {2},
 	Owner = {drorata},
@@ -4790,9 +4778,7 @@ journal = {The International Journal of Robotics Research}
 	Abstract = { <p>In this paper, we present a novel method for computing multiple geodesic connections between two arbitrary points on a smooth surface. Our method is based on a homotopy approach that is able to capture the ambiguity of geodesic connections in the presence of positive Gaussian curvature that generates focal curves.
 Contrary to previous approaches, we exploit focal curves to gain theoretical insights on the number of connecting geodesics and a practical algorithm for collecting these.
 We consider our method as a contribution to the contemporary debate regarding the calculation of distances in general situations, applying continuous concepts of classical differential geometry which are not immediately transferable in purely discrete settings.</p> },
-	Author = {Hannes Thielhelm, Alexander Vais, Daniel Brandes, Franz-Erich Wolter},
-	Date-Added = {2013-01-07 15:52:42 +0100},
-	Date-Modified = {2013-01-07 15:52:52 +0100},
+	Author = {Hannes Thielhelm and Alexander Vais and Daniel Brandes and Franz-Erich Wolter},
 	Howpublished = {Online First™, 26 April 2012},
 	Journal = {THE VISUAL COMPUTER},
 	Month = {0},
@@ -4805,7 +4791,7 @@ We consider our method as a contribution to the contemporary debate regarding th
 	}
 
 @inproceedings{Tournier2009,
-	Author = {Maxime Tournier, Xiaomao Wu, Nicolas Courty, Elise Arnaud, and Lionel Revéret},
+	Author = {Maxime Tournier and Xiaomao Wu and Nicolas Courty and Elise Arnaud and Lionel Revéret},
 	Booktitle = {Computer Graphics Forum},
 	Number = {2},
 	Owner = {drorata},
