Added references to the bib file
intro of saddle-opt-tri

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -1684,6 +1684,20 @@ doi={10.1109/ROBOT.1989.99985}
 	Year = {2008}
 }
 
+@article{Dy90,
+author = {DYN, NIRA and LEVIN, DAVID and RIPPA, SAMUEL},
+title = {Data Dependent Triangulations for Piecewise Linear Interpolation},
+volume = {10},
+number = {1},
+pages = {137-154},
+year = {1990},
+doi = {10.1093/imanum/10.1.137},
+abstract ={Given a set of data points in R2 and corresponding data values, it is clear that the quality of a piecewise linear interpolation over triangles depends on the specific triangulation of the data points. While conventional triangulation methods depend only on the distribution of the data points in R2 in this paper we suggest that the triangulation should depend on the data values as well. Several data dependent criteria for defining the triangulation are discussed and efficient algorithms for computing these triangulations are presented. It is shown for a variety of test cases that data dependent triangulations can improve significantly the quality of approximation and that long and thin triangles, which are traditionally avoided, are sometimes very suitable.},
+URL = {http://imajna.oxfordjournals.org/content/10/1/137.abstract},
+eprint = {http://imajna.oxfordjournals.org/content/10/1/137.full.pdf+html},
+journal = {IMA Journal of Numerical Analysis}
+}
+
 @article{Ed00,
 	Address = {Los Alamitos, CA, USA},
 	Author = {H. Edelsbrunner and D. Letscher and A. Zomorodian},
@@ -2160,6 +2174,18 @@ doi={10.1109/ROBOT.1989.99985}
 	Year = {1982}
 }
 
+@book{Goodman1997,
+	Address = {Boca Raton, FL, USA},
+	Date-Modified = {2010-11-29 10:27:58 +0100},
+	Editor = {Jacob E. Goodman and Joseph O'Rourke},
+	Isbn = {0-8493-8524-5},
+	Owner = {drorata},
+	Publisher = {CRC Press, Inc.},
+	Timestamp = {2008.11.13},
+	Title = {Handbook of discrete and computational geometry},
+	Year = {1997}
+}
+
 @conference{Ed98,
 	Author = {Herbert Edelsbrunner},
 	Booktitle = {LATIN'98: Theoretical Informatics},
@@ -2174,18 +2200,6 @@ doi={10.1109/ROBOT.1989.99985}
 	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
 	Volume = {1380/1998},
 	Year = {1998}
-}
-
-@book{Goodman1997,
-	Address = {Boca Raton, FL, USA},
-	Date-Modified = {2010-11-29 10:27:58 +0100},
-	Editor = {Jacob E. Goodman and Joseph O'Rourke},
-	Isbn = {0-8493-8524-5},
-	Owner = {drorata},
-	Publisher = {CRC Press, Inc.},
-	Timestamp = {2008.11.13},
-	Title = {Handbook of discrete and computational geometry},
-	Year = {1997}
 }
 
 @book{Gr02,
@@ -3498,6 +3512,13 @@ doi={10.1109/ROBOT.1989.99985}
 	Pages = {35--57},
 	Title = {Discrete Differential-Geometry Operators for Triangulated 2-Manifolds},
 	Year = {2002}
+}
+
+@techreport{Me93,
+    author = {E.A. Melissaratos and Elefterios A. Melissaratos and Elefterios A. Melissaratos and Elefterios A. Melissaratos},
+    title = {$L_p$ Optimal $d$ Dimensional Triangulations for Piecewise Linear Interpolation: A New Result on Data dependent Triangulations},
+    institution = {Utrech University},
+    year = {1993}
 }
 
 @article{Me98,
