Added references to the previous work of saddle-opt-tri

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -1000,6 +1000,19 @@ doi={10.1109/ROBOT.1989.99985}
 
 }
 
+@incollection{Ca06a,
+year={2006},
+isbn={978-3-540-34957-0},
+booktitle={Proceedings of the 15th International Meshing Roundtable},
+editor={Pébay, PhilippeP.},
+doi={10.1007/978-3-540-34958-7_17},
+title={On Asymptotically Optimal Meshes by Coordinate Transformation},
+url={http://dx.doi.org/10.1007/978-3-540-34958-7_17},
+publisher={Springer Berlin Heidelberg},
+author={Cañas, GuillermoD. and Gortler, StevenJ.},
+pages={289-305}
+}
+
 @inproceedings{Ca12,
 	Acmid = {2261283},
 	Address = {New York, NY, USA},
@@ -1531,6 +1544,22 @@ doi={10.1109/ROBOT.1989.99985}
 	Timestamp = {2010.11.08},
 	Title = {Curvature and Topology of Riemannian Manifolds},
 	Year = {1985}
+}
+
+@article{DA91,
+year={1991},
+issn={0029-599X},
+journal={Numerische Mathematik},
+volume={59},
+number={1},
+doi={10.1007/BF01385784},
+title={On optimal triangular meshes for minimizing the gradient error},
+url={http://dx.doi.org/10.1007/BF01385784},
+publisher={Springer-Verlag},
+keywords={65D05; 65L05},
+author={D'Azevedo, E.F. and Simpson, R.B.},
+pages={321-348},
+language={English}
 }
 
 @inproceedings{Da10,
