Added Sullivan on discrete diff geom

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -1,5 +1,4 @@
 %% Saved with string encoding Unicode (UTF-8)
-
 @inproceedings{Ai09,
 	Author = {O. Aichholzer and F. Aurenhammer and B. Kornberger and S. Plantinga and G. Rote and A. Sturm and G. Vegter},
 	Booktitle = {Eurographics Symposium on Geometry Processing},
@@ -2215,6 +2214,16 @@ journal = {IMA Journal of Numerical Analysis}
 	Year = {1997}
 }
 
+@book{Gr02,
+	Author = {Gert-Martin Greuel and Gerhard Pfister and O. Bachmann},
+	Date-Added = {2010-11-23 10:02:42 +0100},
+	Date-Modified = {2011-05-30 14:52:12 +0200},
+	Keywords = {algebraic-geometry},
+	Publisher = {Springer},
+	Title = {A Singular Introduction to Commutative Algebra},
+	Year = {2002}
+}
+
 @conference{Ed98,
 	Author = {Herbert Edelsbrunner},
 	Booktitle = {LATIN'98: Theoretical Informatics},
@@ -2229,16 +2238,6 @@ journal = {IMA Journal of Numerical Analysis}
 	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
 	Volume = {1380/1998},
 	Year = {1998}
-}
-
-@book{Gr02,
-	Author = {Gert-Martin Greuel and Gerhard Pfister and O. Bachmann},
-	Date-Added = {2010-11-23 10:02:42 +0100},
-	Date-Modified = {2011-05-30 14:52:12 +0200},
-	Keywords = {algebraic-geometry},
-	Publisher = {Springer},
-	Title = {A Singular Introduction to Commutative Algebra},
-	Year = {2002}
 }
 
 @book{Gr10,
@@ -4831,6 +4830,23 @@ journal = {IMA Journal of Numerical Analysis}
 	Title = {Laguerre Voronoi Diagram on the Sphere},
 	Volume = {6},
 	Year = {2002}}
+
+@incollection{Su08,
+year={2008},
+isbn={978-3-7643-8620-7},
+booktitle={Discrete Differential Geometry},
+volume={38},
+series={Oberwolfach Seminars},
+editor={Bobenko, Alexander I. and Sullivan, John M. and Schröder, Peter and Ziegler, Günter M.},
+doi={10.1007/978-3-7643-8621-4_9},
+title={Curvatures of Smooth and Discrete Surfaces},
+url={http://dx.doi.org/10.1007/978-3-7643-8621-4_9},
+publisher={Birkhäuser Basel},
+keywords={Discrete Gauss curvature; discrete mean curvature; integral curvature relations},
+author={Sullivan, JohnM.},
+pages={175-188},
+language={English}
+}
 
 @article{Sug74,
 	__Markedentry = {[drorata]},
