Added GCAL and Arrangements book to refs

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -927,6 +927,15 @@ doi={10.1109/ROBOT.1989.99985}
 	Year = {2004}
 }
 
+@book{CGAL,
+  title = {{CGAL} User and Reference Manual},
+  author = {{The CGAL Project}},
+  publisher = {{CGAL Editorial Board}},
+  edition = {{4.3}},
+  year = 2013,
+  url = {http://doc.cgal.org/4.3/Manual/packages.html}
+}
+
 @inproceedings{CSteiner2005,
 	Address = {New York, NY, USA},
 	Author = {David Cohen-Steiner and Herbert Edelsbrunner and John Harer},
@@ -2012,6 +2021,24 @@ journal = {IMA Journal of Numerical Analysis}
 	Title = {Progressive point set surfaces},
 	Volume = {22},
 	Year = {2003}
+}
+
+@book{Fo12,
+  added-at = {2012-04-14T00:00:00.000+0200},
+  author = {Fogel, Efi and Halperin, Dan and Wein, Ron},
+  biburl = {http://www.bibsonomy.org/bibtex/2f8ea12867de9bc8def79eafe4ac82097/dblp},
+  ee = {http://dx.doi.org/10.1007/978-3-642-17283-0},
+  interhash = {0c06719b88f3e793416952c578890d4a},
+  intrahash = {f8ea12867de9bc8def79eafe4ac82097},
+  isbn = {978-3-642-17282-3},
+  keywords = {dblp},
+  pages = {I-XIX, 1-293},
+  publisher = {Springer},
+  series = {Geometry and computing},
+  timestamp = {2012-04-14T00:00:00.000+0200},
+  title = {CGAL Arrangements and Their Applications - A Step-by-Step Guide.},
+  volume = 7,
+  year = 2012
 }
 
 @inproceedings{Fr04,
