Added reference to CGAL-arr documentation

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -2251,22 +2251,6 @@ journal = {IMA Journal of Numerical Analysis}
 	Year = {2002}
 }
 
-@conference{Ed98,
-	Author = {Herbert Edelsbrunner},
-	Booktitle = {LATIN'98: Theoretical Informatics},
-	Crossref = {Ed94},
-	Date-Modified = {2011-03-25 08:40:02 +0100},
-	Owner = {drorata},
-	Pages = {119--132},
-	Printed = {1},
-	Publisher = {Springer},
-	Timestamp = {2010.03.04},
-	Title = {Shape reconstruction with Delaunay complex},
-	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
-	Volume = {1380/1998},
-	Year = {1998}
-}
-
 @book{Gr10,
 	Author = {Peter M. Gruber},
 	Date-Added = {2011-01-20 10:48:22 +0100},
@@ -2281,6 +2265,22 @@ journal = {IMA Journal of Numerical Analysis}
 	Totalpages = {580},
 	Url = {http://amazon.com/o/ASIN/3642090230/},
 	Year = {2010}
+}
+
+@conference{Ed98,
+	Author = {Herbert Edelsbrunner},
+	Booktitle = {LATIN'98: Theoretical Informatics},
+	Crossref = {Ed94},
+	Date-Modified = {2011-03-25 08:40:02 +0100},
+	Owner = {drorata},
+	Pages = {119--132},
+	Printed = {1},
+	Publisher = {Springer},
+	Timestamp = {2010.03.04},
+	Title = {Shape reconstruction with Delaunay complex},
+	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
+	Volume = {1380/1998},
+	Year = {1998}
 }
 
 @article{Gr69,
@@ -5388,6 +5388,16 @@ journal = {The International Journal of Robotics Research}
 	Url = {http://citeseerx.ist.psu.edu/viewdoc/download;jsessionid=FF0E511A5475408B7298B4A79ED8B503?doi=10.1.1.10.5064&rep=rep1&type=pdf},
 	Volume = {33},
 	Year = {2005}
+}
+
+@incollection{CGAL-arr,
+  author = {Ron Wein and Eric Berberich and Efi Fogel and Dan Halperin and Michael Hemmer and Oren Salzman and Baruch Zukerman},
+  title = {{2D} Arrangements},
+  publisher = {{CGAL Editorial Board}},
+  edition = {{4.3}},
+  booktitle = {{CGAL} User and Reference Manual},
+  url = {http://doc.cgal.org/4.3/Manual/packages.html#PkgArrangement2Summary},
+  year = 2013
 }
 
 @article{deSi03,
