Added references to definitions of discrete Gaussian curvature

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -623,6 +623,24 @@ journal = {The International Journal of Robotics Research}
 	Year = {2002}
 }
 
+@article{Bo03,
+title = "On the angular defect of triangulations and the pointwise approximation of curvatures ",
+journal = "Computer Aided Geometric Design ",
+volume = "20",
+number = "6",
+pages = "319 -- 341",
+year = "2003",
+issn = "0167-8396",
+doi = "http://dx.doi.org/10.1016/S0167-8396(03)00077-3",
+url = "http://www.sciencedirect.com/science/article/pii/S0167839603000773",
+author = "V. Borrelli and F. Cazals and J.-M. Morvan",
+keywords = "Smooth surfaces",
+keywords = "Meshes",
+keywords = "Curvatures",
+keywords = "Approximations",
+keywords = "Differential geometry "
+}
+
 @inproceedings{Bo05,
 	Acmid = {1064148},
 	Address = {New York, NY, USA},
@@ -934,6 +952,16 @@ doi={10.1109/ROBOT.1989.99985}
   edition = {{4.3}},
   year = 2013,
   url = {http://doc.cgal.org/4.3/Manual/packages.html}
+}
+
+@incollection{CGAL-arr,
+  author = {Ron Wein and Eric Berberich and Efi Fogel and Dan Halperin and Michael Hemmer and Oren Salzman and Baruch Zukerman},
+  title = {{2D} Arrangements},
+  publisher = {{CGAL Editorial Board}},
+  edition = {{4.3}},
+  booktitle = {{CGAL} User and Reference Manual},
+  url = {http://doc.cgal.org/4.3/Manual/packages.html#PkgArrangement2Summary},
+  year = 2013
 }
 
 @inproceedings{CSteiner2005,
@@ -2251,22 +2279,6 @@ journal = {IMA Journal of Numerical Analysis}
 	Year = {2002}
 }
 
-@book{Gr10,
-	Author = {Peter M. Gruber},
-	Date-Added = {2011-01-20 10:48:22 +0100},
-	Date-Modified = {2011-06-01 13:37:53 +0200},
-	Edition = {1st Edition.},
-	Isbn = {9783642090233},
-	Keywords = {geometry-discrete, geometry-convex},
-	Month = {11},
-	Publisher = {Springer},
-	Timestamp = {2011.01.20},
-	Title = {Convex and Discrete Geometry (Grundlehren der mathematischen Wissenschaften)},
-	Totalpages = {580},
-	Url = {http://amazon.com/o/ASIN/3642090230/},
-	Year = {2010}
-}
-
 @conference{Ed98,
 	Author = {Herbert Edelsbrunner},
 	Booktitle = {LATIN'98: Theoretical Informatics},
@@ -2281,6 +2293,22 @@ journal = {IMA Journal of Numerical Analysis}
 	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
 	Volume = {1380/1998},
 	Year = {1998}
+}
+
+@book{Gr10,
+	Author = {Peter M. Gruber},
+	Date-Added = {2011-01-20 10:48:22 +0100},
+	Date-Modified = {2011-06-01 13:37:53 +0200},
+	Edition = {1st Edition.},
+	Isbn = {9783642090233},
+	Keywords = {geometry-discrete, geometry-convex},
+	Month = {11},
+	Publisher = {Springer},
+	Timestamp = {2011.01.20},
+	Title = {Convex and Discrete Geometry (Grundlehren der mathematischen Wissenschaften)},
+	Totalpages = {580},
+	Url = {http://amazon.com/o/ASIN/3642090230/},
+	Year = {2010}
 }
 
 @article{Gr69,
@@ -5388,16 +5416,6 @@ journal = {The International Journal of Robotics Research}
 	Url = {http://citeseerx.ist.psu.edu/viewdoc/download;jsessionid=FF0E511A5475408B7298B4A79ED8B503?doi=10.1.1.10.5064&rep=rep1&type=pdf},
 	Volume = {33},
 	Year = {2005}
-}
-
-@incollection{CGAL-arr,
-  author = {Ron Wein and Eric Berberich and Efi Fogel and Dan Halperin and Michael Hemmer and Oren Salzman and Baruch Zukerman},
-  title = {{2D} Arrangements},
-  publisher = {{CGAL Editorial Board}},
-  edition = {{4.3}},
-  booktitle = {{CGAL} User and Reference Manual},
-  url = {http://doc.cgal.org/4.3/Manual/packages.html#PkgArrangement2Summary},
-  year = 2013
 }
 
 @article{deSi03,
