--- a/personalRef.bib
+++ b/personalRef.bib
@@ -1329,6 +1329,19 @@ pages={289-305}
 	Year = {1985}
 }
 
+@article{Ch96,
+author = {W.S. Chan and F. Chin},
+title = {Approximation of Polygonal Curves with Minimum Number of Line Segments or Minimum Error},
+journal = {International Journal of Computational Geometry & Applications},
+volume = {06},
+number = {01},
+pages = {59-77},
+year = {1996},
+doi = {10.1142/S0218195996000058},
+URL = {http://www.worldscientific.com/doi/abs/10.1142/S0218195996000058},
+eprint = {http://www.worldscientific.com/doi/pdf/10.1142/S0218195996000058}
+}
+
 @inproceedings{Ch99,
 	Acmid = {304894},
 	Address = {New York, NY, USA},
