Updated URL in entry

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -619,7 +619,7 @@ journal = {The International Journal of Robotics Research}
 	Number = {RR-4590},
 	Pdf = {http://hal.inria.fr/inria-00071995/PDF/RR-4590.pdf},
 	Title = {On the angular defect of triangulations and the pointwise approximation of curvatures},
-	Url = {http://hal.inria.fr/inria-00071995},
+	Url = {ftp://ftp-sop.inria.fr/abs/fcazals/papers/LocalCurv1.pdf},
 	Year = {2002}
 }
 
