Reference to Fabri paper on CGAL design

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -2028,6 +2028,19 @@ journal = {IMA Journal of Numerical Analysis}
 	Volume = {abs/1102.2008},
 	Year = {2011}}
 
+@article{Fa00,
+  author = {Fabri, Andreas and Giezeman, Geert-Jan and Kettner, Lutz and Schirra, Stefan and Schönherr, Sven},
+  biburl = {http://www.bibsonomy.org/bibtex/29be081ffe49fb9bb3dae07020cd96162/dblp},
+  ee = {http://dx.doi.org/10.1002/1097-024X(200009)30:11<1167::AID-SPE337>3.0.CO;2-B},
+  journal = {Softw., Pract. Exper.},
+  number = 11,
+  pages = {1167-1202},
+  title = {On the design of CGAL a computational geometry algorithms library.},
+  url = {http://dblp.uni-trier.de/db/journals/spe/spe30.html#FabriGKSS00},
+  volume = 30,
+  year = 2000
+}
+
 @book{Fed96,
 	Author = {Herbert Federer},
 	Owner = {drorata},
