Added ref to quality measure of triangles

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -12,7 +12,6 @@
 	Volume = {Volume 28},
 	Year = {2009}
 }
-
 @article{Alexa2003,
 	Address = {Los Alamitos, CA, USA},
 	Author = {Marc Alexa and Johannes Behr and Daniel Cohen-Or and Shachar Fleishman and David Levin and Claudio T. Silva},
@@ -2305,22 +2304,6 @@ journal = {IMA Journal of Numerical Analysis}
 	Year = {2002}
 }
 
-@conference{Ed98,
-	Author = {Herbert Edelsbrunner},
-	Booktitle = {LATIN'98: Theoretical Informatics},
-	Crossref = {Ed94},
-	Date-Modified = {2011-03-25 08:40:02 +0100},
-	Owner = {drorata},
-	Pages = {119--132},
-	Printed = {1},
-	Publisher = {Springer},
-	Timestamp = {2010.03.04},
-	Title = {Shape reconstruction with Delaunay complex},
-	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
-	Volume = {1380/1998},
-	Year = {1998}
-}
-
 @book{Gr10,
 	Author = {Peter M. Gruber},
 	Date-Added = {2011-01-20 10:48:22 +0100},
@@ -2335,6 +2318,22 @@ journal = {IMA Journal of Numerical Analysis}
 	Totalpages = {580},
 	Url = {http://amazon.com/o/ASIN/3642090230/},
 	Year = {2010}
+}
+
+@conference{Ed98,
+	Author = {Herbert Edelsbrunner},
+	Booktitle = {LATIN'98: Theoretical Informatics},
+	Crossref = {Ed94},
+	Date-Modified = {2011-03-25 08:40:02 +0100},
+	Owner = {drorata},
+	Pages = {119--132},
+	Printed = {1},
+	Publisher = {Springer},
+	Timestamp = {2010.03.04},
+	Title = {Shape reconstruction with Delaunay complex},
+	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
+	Volume = {1380/1998},
+	Year = {1998}
 }
 
 @article{Gr69,
@@ -4108,6 +4107,26 @@ journal = {IMA Journal of Numerical Analysis}
 	Title = {Shape modeling with point-sampled geometry},
 	Volume = {22},
 	Year = {2003}
+}
+
+@article{Pe03,
+ author = {P{\'e}bay, Philippe P. and Baker, Timothy J.},
+ title = {Analysis of Triangle Quality Measures},
+ journal = {Math. Comput.},
+ issue_date = {October 2003},
+ volume = {72},
+ number = {244},
+ month = oct,
+ year = {2003},
+ issn = {0025-5718},
+ pages = {1817--1839},
+ numpages = {23},
+ url = {http://dx.doi.org/10.1090/S0025-5718-03-01485-6},
+ doi = {10.1090/S0025-5718-03-01485-6},
+ acmid = {950427},
+ publisher = {American Mathematical Society},
+ address = {Boston, MA, USA},
+ keywords = {mesh quality, surface triangulation, triangle quality, triangulation},
 }
 
 @article{Pe06,
