--- a/personalRef.bib
+++ b/personalRef.bib
@@ -12,6 +12,7 @@
 	Volume = {Volume 28},
 	Year = {2009}
 }
+
 @article{Alexa2003,
 	Address = {Los Alamitos, CA, USA},
 	Author = {Marc Alexa and Johannes Behr and Daniel Cohen-Or and Shachar Fleishman and David Levin and Claudio T. Silva},
@@ -29,7 +30,6 @@
 	Volume = {9},
 	Year = {2003}
 }
-
 @inproceedings{Am00,
 	Acmid = {336207},
 	Address = {New York, NY, USA},
@@ -2320,6 +2320,17 @@ journal = {IMA Journal of Numerical Analysis}
 	Year = {2010}
 }
 
+@article{Gr69,
+	Author = {Detlef Gromoll and Wolfgang Meyer},
+	Journal = {Journal of Differential Geometry},
+	Keywords = {closed geodesic},
+	Owner = {drorata},
+	Pages = {493--510},
+	Timestamp = {2010.07.30},
+	Title = {Periodic Geodesics on Compact Riemannian Manifolds},
+	Volume = {3},
+	Year = {1969}}
+
 @conference{Ed98,
 	Author = {Herbert Edelsbrunner},
 	Booktitle = {LATIN'98: Theoretical Informatics},
@@ -2335,17 +2346,6 @@ journal = {IMA Journal of Numerical Analysis}
 	Volume = {1380/1998},
 	Year = {1998}
 }
-
-@article{Gr69,
-	Author = {Detlef Gromoll and Wolfgang Meyer},
-	Journal = {Journal of Differential Geometry},
-	Keywords = {closed geodesic},
-	Owner = {drorata},
-	Pages = {493--510},
-	Timestamp = {2010.07.30},
-	Title = {Periodic Geodesics on Compact Riemannian Manifolds},
-	Volume = {3},
-	Year = {1969}}
 
 @article{Gr72,
 	Author = {Jeff Cheeger and Detlef Gromoll},
@@ -3035,6 +3035,14 @@ journal = {IMA Journal of Numerical Analysis}
 	Title = {An algorithm of approximating polyhedra},
 	Volume = {36},
 	Year = {1996}
+}
+
+@inproceedings{Ka96a,
+    author = {Lydia Kavraki and Petr Svestka and Jean-claude Latombe and Mark Overmars},
+    title = {Probabilistic Roadmaps for Path Planning in High-Dimensional Configuration Spaces},
+    booktitle = {IEEE International Conference On Robotics And Automation},
+    year = {1996},
+    pages = {566--580}
 }
 
 @article{Ka98,
